--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  font-family: 'Verdana' !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  max-width: 600px !important;
+  margin: auto;
+  border-bottom: 1px solid rgb(199, 187, 187);
 }
+
+a{
+  text-decoration: none !important;
+  background-color: #bd4251;
+  color: white !important;
+  border-radius: 8px;
+}
+
+a:hover {
+  color: rgb(229, 238, 238) !important;
+}
+
+h1{
+  color: #bd4251;
+}
+
+.container {
+  max-width: 600px !important;
+}
+
+textarea{
+  resize: none !important;
+}
+
+.btn-secondary {
+  background-color: #bd4251 !important;
+}
+
+/* .close-btn {
+  font-size: 0.2rem !important;
+} */
+
+.btn {
+  border: none !important;
+}
+
